--- a/invessence/modules/web/pom.xml
+++ b/invessence/modules/web/pom.xml
@@ -137,6 +137,10 @@
          <artifactId>mysql-connector-java</artifactId>
       </dependency>
          <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+         </dependency>
+         <dependency>
            <groupId>org.primefaces.extensions</groupId>
            <artifactId>primefaces-extensions</artifactId>
          </dependency>
