--- a/invessence/modules/parent/pom.xml
+++ b/invessence/modules/parent/pom.xml
@@ -11,7 +11,6 @@
    <packaging>pom</packaging>
 
    <properties>
-      <invmodel.version>1.0-SNAPSHOT</invmodel.version>
       <invessence.version>1.0-SNAPSHOT</invessence.version>
       <apache-poi>3.11-beta2</apache-poi>
       <camel.version>2.11.0</camel.version>
@@ -57,10 +56,6 @@
       <invessence-theme-version>1.0</invessence-theme-version>
       <avalon-version>20020627</avalon-version>
       <avalonlog-version>2.2.1</avalonlog-version>
-      <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
-      <jdbc.url>jdbc:mysql://localhost:3306/invdb</jdbc.url>
-      <jdbc.username>root</jdbc.username>
-      <jdbc.password>password</jdbc.password>
       <google-api>1.18.0-rc</google-api>
       <preetyfaces-version>2.0.12.Final</preetyfaces-version>
    </properties>
@@ -99,6 +94,21 @@
 
    <dependencyManagement>
       <dependencies>
+         <dependency>
+            <groupId>com.invessence</groupId>
+            <artifactId>core</artifactId>
+            <version>${invessence.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>com.invessence</groupId>
+            <artifactId>invmodel</artifactId>
+            <version>${invessence.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>com.invessence</groupId>
+            <artifactId>virtual-trades</artifactId>
+            <version>${invessence.version}</version>
+         </dependency>
          <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-quartz</artifactId>
@@ -305,21 +315,6 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>${quartz-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>com.invessence</groupId>
-            <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-         </dependency>
-         <dependency>
-            <groupId>com.invessence</groupId>
-            <artifactId>invmodel</artifactId>
-            <version>1.0-SNAPSHOT</version>
-         </dependency>
-         <dependency>
-            <groupId>com.invessence</groupId>
-            <artifactId>virtual-trades</artifactId>
-            <version>1.0-SNAPSHOT</version>
          </dependency>
          <dependency>
             <groupId>com.google.code.maven-play-plugin.org.playframework</groupId>
@@ -556,6 +551,39 @@
          <properties>
             <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
             <jdbc.url>jdbc:mysql://dev.invessence.com:3306/invdb</jdbc.url>
+            <rbsa.url>jdbc:mysql://dev.invessence.com:3306/rbsa</rbsa.url>
+            <jdbc.username>root</jdbc.username>
+            <jdbc.password>d1ysy5_ml</jdbc.password>
+            <apache.url>http://localhost:8080</apache.url>
+            <tomcat.url>http://localhost:8080</tomcat.url>
+            <ssl.url>http://localhost:8080</ssl.url>
+            <mail.host>smtp.gmail.com</mail.host>
+            <mail.username>no-reply@invessence.com</mail.username>
+            <mail.password>G3n3r@l89</mail.password>
+            <mail.port>587</mail.port>
+
+            <base.data.dir>C:\\INV\\data</base.data.dir>
+            <base.rbsa.dir>C:\\INV\\RBSA</base.rbsa.dir>
+            <base.clientdata.dir>C:\\INV\\client</base.clientdata.dir>
+            <base.advisor.dir>C:\INV\advisor</base.advisor.dir>
+            <base.web.dir>C:\workspace\web\www\ROOT</base.web.dir>
+            <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
+            <advisor.upload.localdir>${base.advisor.dir}\\upload\\</advisor.upload.localdir>
+            <advisor.download.localdir>${base.advisor.dir}\\download\\</advisor.download.localdir>
+            <ftp.localdir>${base.data.dir}\\ftp\\</ftp.localdir>
+            <rsba.localdir>${base.rbsa.dir}\\RBSA\\</rsba.localdir>
+            <report.localdir>${base.data.dir}\\rpt\\</report.localdir>
+            <pdf.localdir>${base.data.dir}\\pdf\\</pdf.localdir>
+            <doc.localdir>${base.data.dir}\\doc\\</doc.localdir>
+            <web_reports_dir>${base.web.dir}\\static\\reports\\</web_reports_dir>
+            <email_templates_dir>${base.web.dir}\\template\\html\\</email_templates_dir>
+        </properties>
+      </profile>
+      <profile>
+         <id>3-TMPDB</id>
+         <properties>
+            <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
+            <jdbc.url>jdbc:mysql://dev.invessence.com:3306/tmpdb</jdbc.url>
             <rbsa.url>jdbc:mysql://dev.invessence.com:3306/rbsa</rbsa.url>
             <jdbc.username>root</jdbc.username>
             <jdbc.password>d1ysy5_ml</jdbc.password>
