--- a/invessence/modules/web/src/main/resources/invessence.properties
+++ b/invessence/modules/web/src/main/resources/invessence.properties
@@ -19,3 +19,5 @@ pdf.location=${doc.localdir}
 doc.location=${doc.localdir}
 report.location=${report.localdir}
 advisor.input.datadir=${advisor.input.datadir}
+
+web.mode=${web.mode}
