--- a/invessence/modules/web/pom.xml
+++ b/invessence/modules/web/pom.xml
@@ -323,7 +323,8 @@
             <scope>provided</scope>
         </dependency>
 
-      <!-- Other Primefaces extensions dependecies -->
+      <!-- Other Primefaces extensions dependencies -->
+      <!-- OCPSoft Preetyfaces -->
       <dependency>
             <groupId>org.ocpsoft.rewrite</groupId>
             <artifactId>rewrite-servlet</artifactId>
@@ -334,7 +335,10 @@
           <artifactId>rewrite-config-prettyfaces</artifactId>
           <version>2.0.12.Final</version>
       </dependency>
-         <dependency>
+
+      <!-- itext and other for exporting documents in pdf/excel format -->
+
+      <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
             <version>5.1.3</version>
