Revised Module (introduced ibservice)

--- a/invessence/modules/pom.xml
+++ b/invessence/modules/pom.xml
@@ -25,6 +25,7 @@
       <module>virtual-trades</module>
       <module>emailer</module>
       <module>brokerservices</module>
+      <module>ibservice</module>
       <module>reports</module>
       <module>rbsa-preprocessor</module>
       <module>showcase</module>
