--- a/invessence/modules/parent/pom.xml
+++ b/invessence/modules/parent/pom.xml
@@ -630,8 +630,8 @@
             <rbsa.url>jdbc:mysql://www.invessence.com:3306/rbsa</rbsa.url>
             <jdbc.username>root</jdbc.username>
             <jdbc.password>9TfrjNyqnERM</jdbc.password>
-            <apache.url>http://localhost:8080</apache.url>
-            <tomcat.url>http://localhost:8080</tomcat.url>
+            <apache.url>http://uat.invessence.com:8080</apache.url>
+            <tomcat.url>http://uat.invessence.com:8080</tomcat.url>
             <ssl.url>http://localhost:8080</ssl.url>
             <mail.host>smtp.gmail.com</mail.host>
             <mail.username>no-reply@invessence.com</mail.username>
@@ -653,6 +653,41 @@
             <doc.localdir>${base.data.dir}\doc\</doc.localdir>
             <web_reports_dir>${base.web.dir}\static\reports\</web_reports_dir>
             <email_templates_dir>${base.web.dir}\template\html\</email_templates_dir>
+         </properties>
+      </profile>
+      <profile>
+         <id>5.1-UAT-PROD</id>
+         <properties>
+            <web.mode>PROD</web.mode>
+            <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
+            <jdbc.url>jdbc:mysql://www.invessence.com:3306/invdb</jdbc.url>
+            <rbsa.url>jdbc:mysql://www.invessence.com:3306/rbsa</rbsa.url>
+            <jdbc.username>root</jdbc.username>
+            <jdbc.password>9TfrjNyqnERM</jdbc.password>
+            <apache.url>http://localhost:8080</apache.url>
+            <tomcat.url>http://localhost:8080</tomcat.url>
+            <ssl.url>http://localhost:8080</ssl.url>
+            <mail.host>smtp.gmail.com</mail.host>
+            <mail.username>no-reply@invessence.com</mail.username>
+            <mail.password>G3n3r@l89</mail.password>
+            <mail.port>587</mail.port>
+
+
+            <base.data.dir>/inv/data</base.data.dir>
+            <base.rbsa.dir>/inv/data</base.rbsa.dir>
+            <base.clientdata.dir>/inv/data/client</base.clientdata.dir>
+            <base.advisor.dir>/inv/data/advisor</base.advisor.dir>
+            <base.web.dir>/inv/web/tomcat/invessence/ROOT</base.web.dir>
+            <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
+            <advisor.upload.localdir>${base.advisor.dir}/upload/</advisor.upload.localdir>
+            <advisor.download.localdir>${base.advisor.dir}/download/</advisor.download.localdir>
+            <ftp.localdir>${base.data.dir}/ftp</ftp.localdir>
+            <rsba.localdir>${base.rbsa.dir}/RBSA/</rsba.localdir>
+            <report.localdir>${base.data.dir}/rpt/</report.localdir>
+            <pdf.localdir>${base.data.dir}/pdf/</pdf.localdir>
+            <doc.localdir>${base.data.dir}/doc/</doc.localdir>
+            <web_reports_dir>${base.web.dir}/static/reports/</web_reports_dir>
+            <email_templates_dir>${base.web.dir}/template/html/</email_templates_dir>
          </properties>
       </profile>
       <profile>
