--- a/invessence/modules/iAdvice/pom.xml
+++ b/invessence/modules/iAdvice/pom.xml
@@ -307,19 +307,25 @@
 
       <!-- Other Primefaces extensions dependencies -->
       <!-- OCPSoft Preetyfaces -->
+<!--
       <dependency>
-            <groupId>org.ocpsoft.rewrite</groupId>
-            <artifactId>rewrite-servlet</artifactId>
-            <version>2.0.12.Final</version>
+         <groupId>org.ocpsoft.rewrite</groupId>
+         <artifactId>rewrite-servlet</artifactId>
+         <version>2.0.12.Final</version>
       </dependency>
       <dependency>
           <groupId>org.ocpsoft.rewrite</groupId>
           <artifactId>rewrite-config-prettyfaces</artifactId>
           <version>2.0.12.Final</version>
       </dependency>
+      <dependency>
+         <groupId>com.ocpsoft</groupId>
+         <artifactId>prettyfaces-jsf2</artifactId>
+         <version>3.3.3</version>
+      </dependency>
+-->
 
       <!-- itext and other for exporting documents in pdf/excel format -->
-
       <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
