--- a/invessence/modules/iAdvice/src/main/webapp/WEB-INF/web.xml
+++ b/invessence/modules/iAdvice/src/main/webapp/WEB-INF/web.xml
@@ -94,6 +94,21 @@
         <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
     </listener>
 
+
+<!--
+   <filter>
+      <filter-name>Pretty Filter</filter-name>
+      <filter-class>com.ocpsoft.pretty.PrettyFilter</filter-class>
+   </filter>
+
+   <filter-mapping>
+      <filter-name>Pretty Filter</filter-name>
+      <url-pattern>/*</url-pattern>
+      <dispatcher>FORWARD</dispatcher>
+      <dispatcher>REQUEST</dispatcher>
+      <dispatcher>ERROR</dispatcher>
+   </filter-mapping>
+-->
 <!--
    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
