--- a/invessence/modules/iAdvice/src/main/resources/company.properties
+++ b/invessence/modules/iAdvice/src/main/resources/company.properties
@@ -13,7 +13,7 @@ supportemail.0=info@invessence.com
 theme.0=opensans
 themelib.0=opensans-layout
 copyright.0=iAdvice
-forwardURL.0=https://test.geminifund.com/newaccountswizardnew/Pages/NewAccountsWizard.aspx
+forwardURL.0=https://test.geminifund.com/newaccountswizardnew/Pages/NewAccountsWizard.aspx?FundFamilyId=100
 
 
 
@@ -22,7 +22,7 @@ companyname.1=Invessence
 website.url.1=http://www.invessence.com
 secure.url.1=https:/invessence.com
 web.mode.1=${web.mode}
-logo.1=images/logo/InvessenceLogo.png
+logo.1=images/logo/trowe.jpeg
 logosize.1=40px
 logolib.1=inv
 mainphone.1=(201) 977-2704
