--- a/invessence/modules/iAdvice/src/main/resources/company.properties
+++ b/invessence/modules/iAdvice/src/main/resources/company.properties
@@ -15,6 +15,62 @@ themelib.0=opensans-layout
 copyright.0=iAdvice
 forwardURL.0=https://test.geminifund.com/newaccountswizardnew/Pages/NewAccountsWizard.aspx?FundFamilyId=100
 
+p0info.0=
+p1info.0=Your situation may change over time.  Consider periodically reevaluating whether your time horizon, \
+  investment goals or risk tolerance has changed.
+p2info.0=Your situation may change over time.  Consider periodically reevaluating whether your time horizon, \
+  investment goals or risk tolerance has changed.
+p3info.0=The maximum gain or loss you may incur on an investment is impossible to predict.  The ranges \
+  reflected in this questionnaire are hypothetical and are designed solely to gauge your risk tolerance.  \
+  All investing is subject to risk, including the possible loss of the money invested.  \
+  Your losses could be greater than those illustrated above.
+p4info.0=The maximum gain or loss you may incur on an investment is impossible to predict.  The ranges reflected in \
+  this questionnaire are hypothetical and are designed solely to gauge your risk tolerance.  All investing \
+  is subject to risk, including the possible loss of the money invested.  \
+  Your losses could be greater than those illustrated above.
+p5info.0=Your situation may change over time.  Consider periodically reevaluating whether your time horizon, \
+  investment goals or risk tolerance has changed.
+p6info.0=iAdvice is designed to assist clients in selecting one of five mutual funds managed by \
+  LTAM whose investment guidelines and asset allocation most closely matches the client’s investment profile.  \
+  iAdvice does not provide comprehensive investment advice or consider other assets held by you. \
+  The asset allocation set forth above is the current target asset allocation for the fund \
+  iAdvice has recommended based on your investment profile.  The actual asset allocation of the fund \
+  will fluctuate and may vary from the target asset allocation. Diversification does not ensure a \
+  profit or protect against a loss.  For further information regarding the underlying investment risks, \
+  please review the \
+  <a href="http://ladenburgfunds.com/docs/InvestmentRiskDisclosureETFSite.pdf" target="_ltam">Investment Risk Disclosure</a>. \
+  iAdvice is a service of Ladenburg Thalmann Asset Management, Inc. \
+  (LTAM) a registered investment adviser.   Before investing, please review the LTAM \
+  <a href="http://www.ladenburgfunds.com/docs/LTAM-iAdvice-Brochure.pdf" target="_ltam">iAdvice Disclosure Brochure</a>  \
+  and applicable \
+  <a href="http://www.ladenburgfunds.com/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
+  The Ladenburg Funds are distributed through \
+  Ladenburg Thalmann & Co. Inc., a member of the NYSE_MKT and other principal exchanges, \
+  <a href="http://www.finra.org" target="_ltam">FINRA</a> and \
+  <a href="http://www.sipc.org" target="_ltam">SIPC</a>; \
+  and through other subsidiaries of Ladenburg Thalmann Financial Services Inc. \
+  Ladenburg Thalmann Financial Services Inc. is traded on the NYSE_MKT under the symbol LTS. \
+  <br/>\
+    Not FDIC Insured.  \
+    &bull;&nbsp;No Bank Guarantee. \
+    &bull;&nbsp;May Lose Value
+
+disclaimer.0=iAdvice is a service of Ladenburg Thalmann Asset Management, Inc. \
+  (LTAM) a registered investment adviser.   Before investing, please review the LTAM \
+  <a href="http://www.ladenburgfunds.com/docs/LTAM-iAdvice-Brochure.pdf" target="_ltam">iAdvice Disclosure Brochure</a> \
+  and applicable \
+  <a href="http://www.ladenburgfunds.com/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
+  The Ladenburg Funds are distributed \
+  through Ladenburg Thalmann & Co. Inc., a member of the NYSE_MKT and other principal exchanges, \
+  <a href="http://www.finra.org" target="_ltam">FINRA</a> and \
+  <a href="http://www.sipc.org" target="_ltam">SIPC</a>; and through other subsidiaries of \
+  Ladenburg Thalmann Financial Services Inc. \
+  Ladenburg Thalmann Financial Services Inc. is traded on the NYSE_MKT under the symbol LTS. \
+  <br/>\
+    Not FDIC Insured.  \
+    &bull;&nbsp;No Bank Guarantee. \
+    &bull;&nbsp;May Lose Value
+
 
 
 # Demo Company
@@ -33,6 +89,7 @@ theme.1=modena
 themelib.1=modena-layout
 copyright.1=Invessence
 forwardURL.1=https://www.clientam.com/Universal/servlet/AccountAccess.Login?partnerID=Invessence
+
 
 
 
