--- a/showcase/pom.xml
+++ b/showcase/pom.xml
@@ -4,10 +4,10 @@
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>com.invessence</groupId>
-   <artifactId>invessence</artifactId>
+   <artifactId>showcase</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
-   <name>invessence</name>
+   <name>showcase</name>
 
    <modules>
       <module>modules</module>
