--- a/showcase/modules/web-showcase/src/main/webapp/WEB-INF/web.xml
+++ b/showcase/modules/web-showcase/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,9 @@
         </param-value>
     </context-param>
 
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
     <context-param>
         <param-name>primefaces.THEME</param-name>
