--- a/showcase/modules/yodlee-services/pom.xml
+++ b/showcase/modules/yodlee-services/pom.xml
@@ -12,6 +12,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 <build>
+         <resources>
+         <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+         </resource>
+      </resources>
 </build>
   <properties>
 		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
@@ -101,6 +107,10 @@
 			<version>1.4</version>
 		</dependency> 
 		
-		
+				<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
   </dependencies>
 </project>
