--- a/ltam/modules/brokerservices/src/main/resources/sql.properties
+++ b/ltam/modules/brokerservices/src/main/resources/sql.properties
@@ -1,7 +1,7 @@
 sql.getibfiles=SELECT vendor, filename, tmp_tableName, format, required, canbeempty, available,\
                           sourcepath, postProcess, postInstruction  \
                    FROM download_reports \
-                   WHERE vendor = 'IB'\
+                   WHERE vendor = 'GEMINI'\
                    AND active = 'Y';
 
 sql.insertPositions=insert into tmp_position \
