--- a/ltam/modules/brokerservices/src/main/resources/ftp.properties
+++ b/ltam/modules/brokerservices/src/main/resources/ftp.properties
@@ -1,6 +1,6 @@
-ftp.host=ftp3.interactivebrokers.com
-ftp.username=invessen
-ftp.password=invest12
+ftp.host=sftp.geminifund.com
+ftp.username=Invessence
+ftp.password=Vu!oth6BYa7ooa3
 ftp.localdir=${ftp.localdir}
 report.localdir=${report.localdir}
 ftp.delay=70000
