--- a/ltam/modules/parent/pom.xml
+++ b/ltam/modules/parent/pom.xml
@@ -839,14 +839,48 @@
          <properties>
             <web.mode>DEV</web.mode>
             <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
-            <jdbc.url>jdbc:mysql://207.97.205.91:3306/invdb?noAccessToProcedureBodies=true</jdbc.url>
-            <rbsa.url>jdbc:mysql://207.97.205.91:3306/rbsa?noAccessToProcedureBodies=true</rbsa.url>
-            <ltam.url>jdbc:mysql://207.97.205.91:3306/ltam?noAccessToProcedureBodies=true</ltam.url>
+            <jdbc.url>jdbc:mysql://207.97.205.90:3306/invdb?noAccessToProcedureBodies=true</jdbc.url>
+            <rbsa.url>jdbc:mysql://207.97.205.90:3306/rbsa?noAccessToProcedureBodies=true</rbsa.url>
+            <ltam.url>jdbc:mysql://207.97.205.90:3306/ltam?noAccessToProcedureBodies=true</ltam.url>
             <jdbc.username>webuser</jdbc.username>
             <jdbc.password>inv3ss3nc3u530n1y</jdbc.password>
             <apache.url>http://localhost:8080</apache.url>
             <tomcat.url>http://localhost:8080</tomcat.url>
             <ssl.url>http://localhost:8080</ssl.url>
+            <mail.host>smtp.gmail.com</mail.host>
+            <mail.username>no-reply@invessence.com</mail.username>
+            <mail.password>G3n3r@l89</mail.password>
+            <mail.port>587</mail.port>
+            <base.data.dir>C:\LTAM\data</base.data.dir>
+            <base.rbsa.dir>C:\LTAM\RBSA</base.rbsa.dir>
+            <base.clientdata.dir>C:\LTAM\client</base.clientdata.dir>
+            <base.advisor.dir>C:\LTAM\advisor</base.advisor.dir>
+            <base.web.dir>C:\workspace\web\www\ROOT</base.web.dir>
+            <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
+            <advisor.upload.localdir>${base.advisor.dir}/upload/</advisor.upload.localdir>
+            <advisor.download.localdir>${base.advisor.dir}/download/</advisor.download.localdir>
+            <ftp.localdir>${base.data.dir}/ftp/</ftp.localdir>
+            <rsba.localdir>${base.rbsa.dir}/RBSA/</rsba.localdir>
+            <report.localdir>${base.data.dir}/rpt/</report.localdir>
+            <pdf.localdir>${base.data.dir}/pdf/</pdf.localdir>
+            <doc.localdir>${base.data.dir}/doc/</doc.localdir>
+            <web_reports_dir>${base.web.dir}/static/reports/</web_reports_dir>
+            <email_templates_dir>${base.web.dir}/template/html/</email_templates_dir>
+         </properties>
+      </profile>
+      <profile>
+         <id>A-LTAM-UAT</id>
+         <properties>
+            <web.mode>DEV</web.mode>
+            <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
+            <jdbc.url>jdbc:mysql://localhost:3306/invdb?noAccessToProcedureBodies=true</jdbc.url>
+            <rbsa.url>jdbc:mysql://localhost:3306/rbsa?noAccessToProcedureBodies=true</rbsa.url>
+            <ltam.url>jdbc:mysql://localhost:3306/ltam?noAccessToProcedureBodies=true</ltam.url>
+            <jdbc.username>webuser</jdbc.username>
+            <jdbc.password>inv3ss3nc3u530n1y</jdbc.password>
+            <apache.url>http://demo2.invessence.com:8080</apache.url>
+            <tomcat.url>http://demo2.invessence.com:8080</tomcat.url>
+            <ssl.url>http://demo2.invessence.com:8080</ssl.url>
             <mail.host>smtp.gmail.com</mail.host>
             <mail.username>no-reply@invessence.com</mail.username>
             <mail.password>G3n3r@l89</mail.password>
