--- a/ltam/modules/web/src/main/webapp/WEB-INF/web.xml
+++ b/ltam/modules/web/src/main/webapp/WEB-INF/web.xml
@@ -27,24 +27,19 @@
     </context-param>
    <context-param>
            <param-name>primefaces.THEME</param-name>
-           <param-value>#{uiportal.theme}</param-value>
+           <param-value>#{uiLayout.uiprofile.theme}</param-value>
    </context-param>
-    <!-- Welcome page -->
+
+   <context-param>
+        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+        <param-value>/WEB-INF/primefaces-modena.taglib.xml</param-value>
+    </context-param>
+
+   <!-- Welcome page -->
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
 
-<!--
-    &lt;!&ndash; JSF mapping &ndash;&gt;
-   <filter>
-       <filter-name>PrimeFaces FileUpload Filter</filter-name>
-       <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
-    </filter>
-   <filter-mapping>
-       <filter-name>PrimeFaces FileUpload Filter</filter-name>
-       <servlet-name>Faces Servlet</servlet-name>
-   </filter-mapping>
--->
 
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -68,7 +63,6 @@
         <param-value>
             /WEB-INF/applicationContext.xml
             /WEB-INF/applicationContext-security.xml
-
         </param-value>
     </context-param>
 
