--- a/ltam/modules/broker-services/src/main/resources/parameters.properties
+++ b/ltam/modules/broker-services/src/main/resources/parameters.properties
@@ -1,4 +1,4 @@
-baseDirectory=D:/Project/Abhang/temp
+baseDirectory=/home/abhangp/broker/
 
 
 sqlInsertgd_newaccounts = INSERT INTO gd_newaccounts (powerAgentImportDate,powerAgentAccountNumber,fpInvessenceId,fpRepRefId,fpCusip,fpDollarAmt,emailAddrs) VALUES (?,?,?,?,?,?,?)
