--- a/ltam/modules/web/src/main/resources/company.properties
+++ b/ltam/modules/web/src/main/resources/company.properties
@@ -38,12 +38,12 @@ p6info.0=Symbil is designed to assist clients in selecting one of five mutual fu
   will fluctuate and may vary from the target asset allocation. Diversification does not ensure a \
   profit or protect against a loss.  For further information regarding the underlying investment risks, \
   please review the \
-  <a href="http://ladenburgfunds.com/docs/InvestmentRiskDisclosureETFSite.pdf" target="_ltam">Investment Risk Disclosure</a>. \
+  <a href="/reports/docs/InvestmentRiskDisclosureETFSite.pdf" target="_ltam">Investment Risk Disclosure</a>. \
   Symbil is a service of Ladenburg Thalmann Asset Management, Inc. \
   (LTAM) a registered investment adviser.   Before investing, please review the LTAM \
-  <a href="http://www.ladenburgfunds.com/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a>  \
+  <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a>  \
   and applicable \
-  <a href="http://www.ladenburgfunds.com/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
+  <a href="/reports/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
   The Ladenburg Funds are distributed through \
   Ladenburg Thalmann & Co. Inc., a member of the NYSE_MKT and other principal exchanges, \
   <a href="http://www.finra.org" target="_ltam">FINRA</a> and \
@@ -57,9 +57,9 @@ p6info.0=Symbil is designed to assist clients in selecting one of five mutual fu
 
 disclaimer.0=Symbil is a service of Ladenburg Thalmann Asset Management, Inc. \
   (LTAM) a registered investment adviser.   Before investing, please review the LTAM \
-  <a href="http://www.ladenburgfunds.com/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a> \
+  <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a> \
   and applicable \
-  <a href="http://www.ladenburgfunds.com/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
+  <a href="/reports/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
   The Ladenburg Funds are distributed \
   through Ladenburg Thalmann & Co. Inc., a member of the NYSE_MKT and other principal exchanges, \
   <a href="http://www.finra.org" target="_ltam">FINRA</a> and \
