--- a/ltam/modules/web/src/main/resources/company.properties
+++ b/ltam/modules/web/src/main/resources/company.properties
@@ -55,22 +55,18 @@ p6info.0=Symbil is designed to assist clients in selecting one of five mutual fu
     &bull;&nbsp;No Bank Guarantee. \
     &bull;&nbsp;May Lose Value
 
-disclaimer.0=Symbil is a service of Ladenburg Thalmann Asset Management, Inc. \
-  (LTAM) a registered investment adviser.   Before investing, please review the LTAM \
-  <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a> \
-  and applicable \
-  <a href="/reports/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
-  The Ladenburg Funds are distributed \
+disclaimer.0=Symbil is a service of Ladenburg Thalmann Asset Management, Inc. (LTAM) a registered investment adviser. \
+   Before investing, please review the LTAM <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a> \
+  and applicable <a href="/reports/docs/prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
+  Diversification does not ensure profit or protect against loss.  The Ladenburg Funds are distributed \
   through Ladenburg Thalmann & Co. Inc., a member of the NYSE_MKT and other principal exchanges, \
   <a href="http://www.finra.org" target="_ltam">FINRA</a> and \
   <a href="http://www.sipc.org" target="_ltam">SIPC</a>; and through other subsidiaries of \
-  Ladenburg Thalmann Financial Services Inc. \
-  Ladenburg Thalmann Financial Services Inc. is traded on the NYSE_MKT under the symbol LTS. \
+  Ladenburg Thalmann Financial Services Inc. Ladenburg Thalmann Financial Services Inc. is traded on the NYSE_MKT under the symbol LTS. \
   <br/>\
     Not FDIC Insured.  \
     &bull;&nbsp;No Bank Guarantee. \
     &bull;&nbsp;May Lose Value
-
 
 
 # Demo Company
