Showcase for Yodlee

--- a/showcase/modules/web-showcase/src/main/resources/error_messages.properties
+++ b/showcase/modules/web-showcase/src/main/resources/error_messages.properties
@@ -92,3 +92,24 @@ accountlocked.msg=Account is locked due to too many tries.  Please check your em
 
 er.general = Error occurred during {0} process.  An email alert has been sent to support with details.  We apologize for this inconvenience, \
 please try this function later.  Support staff will reach back to you when resolved.
+
+
+#yodlee-services internal error messages
+err.ydli001 = User not available in Invessence DB
+err.ydli002 = Cobrand session token not valid
+err.ydli003 = User not available in Yodlee-Service DB
+err.ydli004 = Expected object not getting
+err.ydli005 = JSON Object parsing error
+err.ydli006 = Unknown Host Exception
+err.ydli007 = Yodlee Service Technical Issue
+err.ydli008 = User doesn't have summaries site details
+err.ydli009 = Sites are not available for this user
+err.ydli010 = Yodlee service is inactive
+
+#yodlee-services external error messages
+err.ydle002 = User Registration Error
+err.ydle003 = User Unregistration Error
+err.ydle004 = User Login Error
+err.ydle005 = Site account Error
+err.ydle006 = FastLink API Error
+err.ydle007 = Refresh account Error
