--- a/showcase/modules/web-showcase/src/main/resources/resources.properties
+++ b/showcase/modules/web-showcase/src/main/resources/resources.properties
@@ -1,6 +1,8 @@
 ############################################################################################################################
 ################################################### CoBrandLogin Account ###################################################
 
+YODLEE_PROCESS_STATUS=I
+
 HOST_URI = https://yisandbox.yodleeinteractive.com/services/srest/private-sandbox124/
 
 COBRAND_LOGIN = sandbox124
