Xignite Price Api

--- a/invessence/modules/price-processor/pom.xml
+++ b/invessence/modules/price-processor/pom.xml
@@ -54,6 +54,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<!-- json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 	  <defaultGoal>install</defaultGoal>
