--- a/ltam/modules/web/src/main/resources/company.properties
+++ b/ltam/modules/web/src/main/resources/company.properties
@@ -1,8 +1,8 @@
 # Default Company
-companyname.0=Symbil
+companyname.0=$ymbil
 web.mode=PROD
-website.url.0=${apache.url}
-secure.url.0=${ssl.url}
+website.url.0=http://symbil.com
+secure.url.0=https://symbil.com
 logo.0=images/logo/Symbil.png
 logosize.0=200px
 logolib.0=invessence
@@ -12,7 +12,7 @@ mainemail.0=info@invessence.com
 supportemail.0=info@invessence.com
 theme.0=opensans
 themelib.0=opensans-layout
-copyright.0=Symbil
+copyright.0=$ymbil
 forwardURL.0=https://newaccounts.geminifund.com/Pages/NewAccountsWizard.aspx?FundFamilyId=310
 
 p0info.0=
@@ -30,18 +30,18 @@ p4info.0=The maximum gain or loss you may incur on an investment is impossible t
   Your losses could be greater than those illustrated above.
 p5info.0=Your situation may change over time.  Consider periodically reevaluating whether your time horizon, \
   investment goals or risk tolerance has changed.
-p6info.0=Symbil is designed to assist clients in selecting one of five mutual funds managed by \
-  LTAM whose investment guidelines and asset allocation most closely matches the client’s investment profile.  \
-  Symbil does not provide comprehensive investment advice or consider other assets held by you. \
+p6info.0=$ymbil is designed to assist clients in selecting one of five mutual funds managed by \
+  LTAM whose investment guidelines and asset allocation most closely matches the clientï¿½s investment profile.  \
+  $ymbil does not provide comprehensive investment advice or consider other assets held by you. \
   The asset allocation set forth above is the current target asset allocation for the fund \
-  Symbil has recommended based on your investment profile.  The actual asset allocation of the fund \
+  $ymbil has recommended based on your investment profile.  The actual asset allocation of the fund \
   will fluctuate and may vary from the target asset allocation. Diversification does not ensure a \
   profit or protect against a loss.  For further information regarding the underlying investment risks, \
   please review the \
   <a href="/reports/docs/InvestmentRiskDisclosureETFSite.pdf" target="_ltam">Investment Risk Disclosure</a>. \
-  Symbil is a service of Ladenburg Thalmann Asset Management, Inc. \
+  $ymbil is a service of Ladenburg Thalmann Asset Management, Inc. \
   (LTAM) a registered investment adviser.   Before investing, please review the LTAM \
-  <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a>  \
+  <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">$ymbil Disclosure Brochure</a>  \
   and applicable \
   <a href="/reports/docs/Prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
   The Ladenburg Funds are distributed through \
@@ -55,8 +55,8 @@ p6info.0=Symbil is designed to assist clients in selecting one of five mutual fu
     &bull;&nbsp;No Bank Guarantee. \
     &bull;&nbsp;May Lose Value
 
-disclaimer.0=Symbil is a service of Ladenburg Thalmann Asset Management, Inc. (LTAM) a registered investment adviser. \
-   Before investing, please review the LTAM <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">Symbil Disclosure Brochure</a> \
+disclaimer.0=$ymbil is a service of Ladenburg Thalmann Asset Management, Inc. (LTAM) a registered investment adviser. \
+   Before investing, please review the LTAM <a href="/reports/docs/LTAM-Symbil-Brochure.pdf" target="_ltam">$ymbil Disclosure Brochure</a> \
   and applicable <a href="/reports/docs/Prospectus.pdf" target="_ltam">mutual fund prospectus</a>. \
   Diversification does not ensure profit or protect against loss.  The Ladenburg Funds are distributed \
   through Ladenburg Thalmann & Co. Inc., a member of the NYSE_MKT and other principal exchanges, \
