Introduced new Fixed Model

--- a/invessence/modules/web/src/main/resources/company.properties
+++ b/invessence/modules/web/src/main/resources/company.properties
@@ -21,6 +21,8 @@ theme.0=modena
 library.0=modena-layout
 forwardURL.0=
 copyright.0=Invessence, Inc.
+forward.url=https://www.clientam.com/Universal/servlet/formWelcome?partnerID=Invessence&invitation_id=6596230&token=56551&invitedBy=NDE4aW52ZXN0
+
 
 company.1=iAdvice
 website.url.1=http://iadvice.com
